# LLM-LCT-sequencing

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  annotation-tool.ipynb  environment.yaml  pyproject.toml  requirements.txt  user-guide.md
annotation/: Annotation.py  README.md  __init__.py  annotation-tool.ipynb  class-diagram.md
annotation/controller/: AnnotationController.py  __init__.py
annotation/model/: AnnotationService.py
finetuning/: README.md  env_lct_finetuning.yaml  plot_training_data.py  prepare_training_data.py  synthetic_to_excel.py  train_model.py
llm/: __init__.py  excel_json_converter.py  experiment.py  experiment_multi.py  llmprocess.py  load_schema_json.py  utils_llm.py
notebooks/: LLMprocess_test.ipynb  llm_experiment.ipynb  llm_experiment_multi.ipynb
schemas/: README.md  instruction_multiprompt.txt  instruction_prompt.txt  instruction_prompt_json.txt  instruction_prompt_multiple.txt  openai_pricing.json  schema_sequencing_examples_reason.json  sequences.csv  sequencing_examples_2clauses.xlsx  sequencing_examples_2clauses_converted.json  sequencing_examples_reason.json  sequencing_examples_reason.xlsx  sequencing_examples_reason_converted.json  sequencing_examples_reason_recovered.json  sequencing_types.json  sequencing_types.xlsx  sequencing_types_clean.json  sequencing_types_converted.json  sequencing_types_outdated.json
tests/: reference_text.txt  sequences_test.csv  sequencing_examples.xlsx  test_utils_llm.py
tools/: excel_json_converter.py  experiment.py  llmprocess.py  load_schema_json.py  utils_llm.py
(+189 files in other folders)
