[tool.poetry]
name = "llm-lct-sequencing"
version = "1.2.6"
description = "An automatic classification system that detects and identifies the sequencing types of combination of passages (clauses) according to Legitimation Code Theory"
authors = ["Sebastian Haan <sebastian.haan@sydney.edu.au>", "Hamish Croser <h.croser1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
clause-segmenter = "~0.1.1"
python-docx = "~1.0.1"
jsonschema = "~4.19.2"
matplotlib = "~3.7.1"
numpy = "~1.24.3"
openai = "~0.28.0"
openpyxl = "~3.1.2"
pandas = "~1.5.3"
panel = "~1.3.1"
param = "~2.0.1"
plotly = "~5.24.1"
seaborn = "~0.13.0"
tiktoken = "~0.5.1"
spacy = ">=3.7.2,<3.8.0"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}

[tool.poetry.group.dev.dependencies]
jupyter = "~1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
